# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: index.py  levenshtein.py  sanakirja.py
src/entities/: lauseenkorjaaja.py  levenshtein.py  trie.py  trie_solmu.py
src/services/: levenshtein_service.py
src/tests/: lauseenkorjaaja_test.py  levenshtein_service_test.py  levenshtein_test.py  trie_solmu_test.py
src/ui/: app.py  konsoli_io.py  ohjelma.py
